Modificación en mappers y petición create Se modifica el método toDTO de Alumno para setear los valores que debe incluir en la respuesta. Se limpia el código del controlador, eliminando las instancias de mapper no necesarias y se modifica el método create para que la creación de un perfil de alumno se vincule con el usuario autenticado y que realiza la petición.